--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <meta charset="utf-8">
 <head>
-	<title>nightkit | a tiny bookmarklet for saving your eyes</title>
+	<title>nightkit | a tiny bookmarklet for your eyes</title>
 	<link href='http://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
 	<style type="text/css">
 	body{
@@ -46,7 +46,7 @@
 </head>
 <body>
 <h1>{nightkit}</h1>
-<h2>A tiny bookmarklet for Webkit browsers for saving your eyes</h2>
+<h2>A tiny bookmarklet for Webkit browsers that loves your eyes</h2>
 
 <a href="javascript:(function(){document.querySelector('body').style.webkitFilter='invert(1)';}())" id="thelink">Night mode</a>
 <p>Drag this to your <b>bookmark toolbar</b>, and click the bookmark in any website to activate it, <br> 
